@@ -91,6 +91,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #15758: Fix FileIO.readall() so it no longer has O(n**2) complexity.
+
 - Issue #14596: The struct.Struct() objects now use more compact implementation.
 
 - Issue #17981: Closed socket on error in SysLogHandler.
